<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlyingColorsPlayerAid</string>
    <string name="rate_label">Rate:</string>
    <string name="nationality_label">Nationality:</string>
    <string name="year_label">Year:</string>
    <string name="range_label">Range:</string>

    <!-- Nationalites -->
    <string name="british">British</string>
    <string name="french">French</string>
    <string name="danish">Danish</string>
    <string name="spanish">Spanish</string>
    <string name="dutch">Dutch</string>

    <!-- Rates -->
    <string name="rate_1_overgunned">(1)</string>
    <string name="rate_1">1</string>
    <string name="rate_2">2</string>
    <string name="rate_3">3</string>
    <string name="rate_4">4</string>
    <string name="rate_5">5</string>
    <string name="rate_6">6</string>
    <string name="rate_g">G</string>
    <string name="rate_t">T</string>
    <string name="enter_year_hint">Enter year</string>
    <string name="enter_range_hint">Enter Range</string>
    <string name="full_sails">Full Sails</string>
    <string name="tacking">Tacking</string>
    <string name="partial_broadside">Partial broadside</string>
    <string name="base_firepower">Base firepower</string>
    <string name="rotating_at_anchor">Rotating at anchor</string>
    <string name="dismasted">Dismasted</string>
    <string name="attackers_audacity">Attackers Audacity</string>
    <string name="audacity">Audacity</string>
    <string name="on_fire">On fire</string>
    <string name="square_rate">Square rate</string>
    <string name="damage_taken">Damage taken</string>
    <string name="choose_scenario">Choose scenario</string>
    <string name="participating_nations">Participating nations</string>
    <string name="british_audacity">British audacity</string>
    <string name="french_audacity">French audacity</string>
    <string name="dutch_audacity">Dutch audacity</string>
    <string name="danish_audacity">Danish audacity</string>
    <string name="spanish_audacity">Spanish audacity</string>
    <string name="select_existing_scenario">Select scenario</string>
    <string name="or_setup_you_own">Or setup you own</string>
    <string name="select_agressor">Select agressor</string>
    <string name="fireing_situation">Fireing situation</string>
    <string name="unset_divider_text">UNDEFINED</string>
    <string name="range">Range</string>
    <string name="modifiers">Modifiers</string>
    <string name="start_game">Start</string>
    <string name="caluclated_base_firepower_content_description">Caluclated base firepower</string>
    <string name="new_game">New game</string>
    <string name="options">Options</string>
    <string name="initializing_database_">Initializing database…</string>
    <string name="about">About</string>
    <string name="keep_screen_on_">Keep screen on?</string>
    <string name="scenario">Scenario:</string>
    <string name="firepower">Firepower</string>
    <string name="scenarios">scenarios</string>
    <string name="_flying_colors_fleet_actions_in_the_age_of_sail_to_which_this_app_is_a_player_aid_for_is_2012_gmt_games_llc_">gmt_copyright</string>
    <string name="gmt_copyright">\'Flying Colors - Fleet actions in The Age of Sail\' to which this app is a Player Aid for is © 2012 GMT Games, LLC.</string>
   <string name="contact">Feedback</string>
   <string name="copyright">Copyright</string>
   <string name="twitter">Twitter: @erikmejerhansen</string>
   <string name="googleplus">Google+: +ErikHansen</string>
   <string name="mail">Mail: erik@mejer-hansen.dk</string>
   <string name="feel_free_to_reach_out_with_feedback_">Feel free to reach out via:</string>
   <string name="source">Source code for this app can be found at github</string>
   <string name="send_mail">Send mail...</string>
</resources>