<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flying_colors="http://schemas.android.com/apk/res/dk.mejer.hansen.flyingcolors"
    android:id="@+id/base_firepower_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="4dp"
        android:nextFocusDown="@+id/setup_scenario_scenario_selector" >

        <dk.mejer.hansen.flyingcolors.view.DividerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/section_divider"
            flying_colors:divider_text="@string/select_existing_scenario" />

        

        <Spinner
            android:id="@id/setup_scenario_scenario_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/choose_scenario" 
            android:layout_margin="15dp"
            android:contentDescription="@string/scenarios"
            />

        <Button
            style="@style/main_menu_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="@string/start_game" 
            />
    </LinearLayout>

</ScrollView>