<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flying_colors="http://schemas.android.com/apk/res/dk.mejer.hansen.flyingcolors"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_firepower_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="4dp" >

        <dk.mejer.hansen.flyingcolors.view.DividerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/section_divider"
            flying_colors:divider_text="@string/options" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_screen_on_"
            android:onClick="onKeepScreenOnToggled"
            android:id="@+id/options_keep_screen_on_checkbox" />

        <dk.mejer.hansen.flyingcolors.view.DividerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/section_divider"
            flying_colors:divider_text="@string/about" />
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Developed by.... source avilabe at github. contact information: mail, twitter google+. Rights resserved by GMT...."/>
    </LinearLayout>

</ScrollView>